libs/override_key_core/tests/errors/not_named_fields.rs
use override_key_derive::ApplyOverrides;

// Tuple struct, no field names
#[derive(ApplyOverrides)]
struct TupleArgs(String, String);

fn main() {}