libs/override_key_core/tests/errors/not_named_fields.stderr
error: ApplyOverrides requires a struct with named fields
 --> tests/errors/not_named_fields.rs:5:17
  |
5 | struct TupleArgs(String, String);
  |                 ^^^^^^^^^^^^^^^^
